# mmap-io

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: mmap_bench.rs
docs/: API.md  README.md
src/: advise.rs  atomic.rs  errors.rs  flush.rs  iterator.rs  lib.rs  lock.rs  manager.rs  mmap.rs  segment.rs  utils.rs  watch.rs
tests/: additional_tests.rs  async_flush.rs  basic.rs  feature_integration.rs  hugepages.rs  platform_parity.rs  size_limits.rs
